# Auto-IEEE-Layout-Compiler

./: .env.example  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
engine/: .env.example  README.md  pyproject.toml
engine/src/engine/: cli.py  main.py  schema.py
engine/src/engine/api/: compile.py  jobs.py
engine/src/engine/jobs/: runner.py  store.py
engine/src/engine/math/: base.py  matplotlib_backend.py
engine/src/engine/pdf/: __init__.py  base.py  cloudconvert_backend.py  libreoffice_backend.py
engine/src/engine/preflight/: checks.py
engine/src/engine/renderer/: docx_builder.py  pipeline.py  styles.py
engine/templates/: README.md  ieee_template.docx
engine/tests/fixtures/: README.md  edge_cases.json  minimal.json  wide_eq.json
examples/: 01-minimal.json  02-figures-equations-tables.json  03-citations-and-lists.json  README.md
frontend/: .env.local.example  README.md  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useCompileJob.ts  useFormProject.ts  useProject.ts
frontend/src/lib/: api.ts  formToModel.ts  parsePreview.ts
frontend/src/types/: document-model.ts  paper-form.ts
gateway/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
gateway/src/: index.ts
gateway/src/routes/: health.ts  jobs.ts  projects.ts
gateway/src/services/: engine-client.ts  markdown-parser.ts  object-storage.ts  project-store.ts
scripts/: dev-engine.ps1
shared/docs/: markdown-spec.md
shared/schema/: document_model.py  document_model.ts
(+13 files in other folders)
