[project]
name = "engine"
version = "0.1.0"
description = "IEEE Paper Compiler — Processing Engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "python-multipart>=0.0.9",
    "python-docx>=1.1.2",
    "docxtpl>=0.16.7",
    "matplotlib>=3.9.0",
    "Pillow>=10.4.0",
    "sse-starlette>=2.1.0",
    "aiofiles>=23.2.1",
    "lxml>=5.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engine"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]
